extracting Metadata from orig sets

--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/Climate_Merge2Niskin.R.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/Climate_Merge2Niskin.R.ipynb
@@ -2,45 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.3     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.0.0     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘reshape2’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:tidyr’:\n",
-      "\n",
-      "    smiths\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘lubridate’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    date, intersect, setdiff, union\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse, warn.conflicts = FALSE)\n",
     "\n",
@@ -61,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,12 +35,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 17</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>time</th><th scope=col>X10m_u_component_of_wind</th><th scope=col>X10m_v_component_of_neutral_wind</th><th scope=col>X10m_v_component_of_wind</th><th scope=col>X10m_wind_speed</th><th scope=col>X2m_temperature</th><th scope=col>coefficient_of_drag_with_waves</th><th scope=col>instantaneous_eastward_turbulent_surface_stress</th><th scope=col>instantaneous_northward_turbulent_surface_stress</th><th scope=col>mean_wave_period</th><th scope=col>medium_cloud_cover</th><th scope=col>normalized_stress_into_ocean</th><th scope=col>ocean_surface_stress_equivalent_10m_neutral_wind_speed</th><th scope=col>sea_surface_temperature</th><th scope=col>surface_pressure</th><th scope=col>u_component_stokes_drift</th><th scope=col>v_component_stokes_drift</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;dttm&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>1979-01-03 07:33:20</td><td>-5.555541</td><td>-3.4421816</td><td>-3.3835087</td><td>6.876636</td><td>297.3916</td><td>0.0009660448</td><td>-0.06716114</td><td>-0.038194000</td><td>5.109558</td><td>0.08314790</td><td>0.9682530</td><td>5.104736</td><td>297.8951</td><td>101222.0</td><td>-0.04802281</td><td>-0.038124714</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>1979-02-03 07:33:20</td><td>-7.505441</td><td>-3.7506056</td><td>-3.7221937</td><td>8.661912</td><td>297.8700</td><td>0.0010872188</td><td>-0.11780131</td><td>-0.057158770</td><td>5.138206</td><td>0.03305978</td><td>0.9474420</td><td>6.360840</td><td>298.1784</td><td>101276.4</td><td>-0.07668150</td><td>-0.046993010</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>1979-03-03 07:33:20</td><td>-6.009777</td><td>-3.6572094</td><td>-3.6413355</td><td>7.384764</td><td>297.8200</td><td>0.0009927112</td><td>-0.07737940</td><td>-0.044714570</td><td>4.698611</td><td>0.07676148</td><td>0.9649039</td><td>5.394026</td><td>297.9276</td><td>101158.9</td><td>-0.05440897</td><td>-0.040235480</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>1979-04-03 07:33:20</td><td>-6.840693</td><td>-3.6980400</td><td>-3.6708593</td><td>8.000152</td><td>298.8391</td><td>0.0010309881</td><td>-0.09462619</td><td>-0.048265874</td><td>4.723882</td><td>0.10878414</td><td>0.9585794</td><td>5.801816</td><td>299.0398</td><td>101125.6</td><td>-0.06506085</td><td>-0.042440515</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>1979-05-03 07:33:20</td><td>-5.371830</td><td>-2.6187296</td><td>-2.5814304</td><td>6.368370</td><td>299.5951</td><td>0.0009067503</td><td>-0.06155479</td><td>-0.027291000</td><td>4.382532</td><td>0.14890963</td><td>0.9820386</td><td>4.473986</td><td>299.9145</td><td>101088.1</td><td>-0.04461080</td><td>-0.027182150</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>1979-06-03 07:33:20</td><td>-2.359188</td><td>-0.7256927</td><td>-0.7029285</td><td>3.718911</td><td>299.5590</td><td>0.0007623711</td><td>-0.01893848</td><td>-0.005485456</td><td>4.253867</td><td>0.19013447</td><td>0.9968835</td><td>2.887207</td><td>300.3838</td><td>101256.3</td><td>-0.01688945</td><td>-0.008176684</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 17\n",
+       "\\begin{tabular}{r|lllllllllllllllll}\n",
+       "  & time & X10m\\_u\\_component\\_of\\_wind & X10m\\_v\\_component\\_of\\_neutral\\_wind & X10m\\_v\\_component\\_of\\_wind & X10m\\_wind\\_speed & X2m\\_temperature & coefficient\\_of\\_drag\\_with\\_waves & instantaneous\\_eastward\\_turbulent\\_surface\\_stress & instantaneous\\_northward\\_turbulent\\_surface\\_stress & mean\\_wave\\_period & medium\\_cloud\\_cover & normalized\\_stress\\_into\\_ocean & ocean\\_surface\\_stress\\_equivalent\\_10m\\_neutral\\_wind\\_speed & sea\\_surface\\_temperature & surface\\_pressure & u\\_component\\_stokes\\_drift & v\\_component\\_stokes\\_drift\\\\\n",
+       "  & <dttm> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & 1979-01-03 07:33:20 & -5.555541 & -3.4421816 & -3.3835087 & 6.876636 & 297.3916 & 0.0009660448 & -0.06716114 & -0.038194000 & 5.109558 & 0.08314790 & 0.9682530 & 5.104736 & 297.8951 & 101222.0 & -0.04802281 & -0.038124714\\\\\n",
+       "\t2 & 1979-02-03 07:33:20 & -7.505441 & -3.7506056 & -3.7221937 & 8.661912 & 297.8700 & 0.0010872188 & -0.11780131 & -0.057158770 & 5.138206 & 0.03305978 & 0.9474420 & 6.360840 & 298.1784 & 101276.4 & -0.07668150 & -0.046993010\\\\\n",
+       "\t3 & 1979-03-03 07:33:20 & -6.009777 & -3.6572094 & -3.6413355 & 7.384764 & 297.8200 & 0.0009927112 & -0.07737940 & -0.044714570 & 4.698611 & 0.07676148 & 0.9649039 & 5.394026 & 297.9276 & 101158.9 & -0.05440897 & -0.040235480\\\\\n",
+       "\t4 & 1979-04-03 07:33:20 & -6.840693 & -3.6980400 & -3.6708593 & 8.000152 & 298.8391 & 0.0010309881 & -0.09462619 & -0.048265874 & 4.723882 & 0.10878414 & 0.9585794 & 5.801816 & 299.0398 & 101125.6 & -0.06506085 & -0.042440515\\\\\n",
+       "\t5 & 1979-05-03 07:33:20 & -5.371830 & -2.6187296 & -2.5814304 & 6.368370 & 299.5951 & 0.0009067503 & -0.06155479 & -0.027291000 & 4.382532 & 0.14890963 & 0.9820386 & 4.473986 & 299.9145 & 101088.1 & -0.04461080 & -0.027182150\\\\\n",
+       "\t6 & 1979-06-03 07:33:20 & -2.359188 & -0.7256927 & -0.7029285 & 3.718911 & 299.5590 & 0.0007623711 & -0.01893848 & -0.005485456 & 4.253867 & 0.19013447 & 0.9968835 & 2.887207 & 300.3838 & 101256.3 & -0.01688945 & -0.008176684\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 17\n",
+       "\n",
+       "| <!--/--> | time &lt;dttm&gt; | X10m_u_component_of_wind &lt;dbl&gt; | X10m_v_component_of_neutral_wind &lt;dbl&gt; | X10m_v_component_of_wind &lt;dbl&gt; | X10m_wind_speed &lt;dbl&gt; | X2m_temperature &lt;dbl&gt; | coefficient_of_drag_with_waves &lt;dbl&gt; | instantaneous_eastward_turbulent_surface_stress &lt;dbl&gt; | instantaneous_northward_turbulent_surface_stress &lt;dbl&gt; | mean_wave_period &lt;dbl&gt; | medium_cloud_cover &lt;dbl&gt; | normalized_stress_into_ocean &lt;dbl&gt; | ocean_surface_stress_equivalent_10m_neutral_wind_speed &lt;dbl&gt; | sea_surface_temperature &lt;dbl&gt; | surface_pressure &lt;dbl&gt; | u_component_stokes_drift &lt;dbl&gt; | v_component_stokes_drift &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | 1979-01-03 07:33:20 | -5.555541 | -3.4421816 | -3.3835087 | 6.876636 | 297.3916 | 0.0009660448 | -0.06716114 | -0.038194000 | 5.109558 | 0.08314790 | 0.9682530 | 5.104736 | 297.8951 | 101222.0 | -0.04802281 | -0.038124714 |\n",
+       "| 2 | 1979-02-03 07:33:20 | -7.505441 | -3.7506056 | -3.7221937 | 8.661912 | 297.8700 | 0.0010872188 | -0.11780131 | -0.057158770 | 5.138206 | 0.03305978 | 0.9474420 | 6.360840 | 298.1784 | 101276.4 | -0.07668150 | -0.046993010 |\n",
+       "| 3 | 1979-03-03 07:33:20 | -6.009777 | -3.6572094 | -3.6413355 | 7.384764 | 297.8200 | 0.0009927112 | -0.07737940 | -0.044714570 | 4.698611 | 0.07676148 | 0.9649039 | 5.394026 | 297.9276 | 101158.9 | -0.05440897 | -0.040235480 |\n",
+       "| 4 | 1979-04-03 07:33:20 | -6.840693 | -3.6980400 | -3.6708593 | 8.000152 | 298.8391 | 0.0010309881 | -0.09462619 | -0.048265874 | 4.723882 | 0.10878414 | 0.9585794 | 5.801816 | 299.0398 | 101125.6 | -0.06506085 | -0.042440515 |\n",
+       "| 5 | 1979-05-03 07:33:20 | -5.371830 | -2.6187296 | -2.5814304 | 6.368370 | 299.5951 | 0.0009067503 | -0.06155479 | -0.027291000 | 4.382532 | 0.14890963 | 0.9820386 | 4.473986 | 299.9145 | 101088.1 | -0.04461080 | -0.027182150 |\n",
+       "| 6 | 1979-06-03 07:33:20 | -2.359188 | -0.7256927 | -0.7029285 | 3.718911 | 299.5590 | 0.0007623711 | -0.01893848 | -0.005485456 | 4.253867 | 0.19013447 | 0.9968835 | 2.887207 | 300.3838 | 101256.3 | -0.01688945 | -0.008176684 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  time                X10m_u_component_of_wind X10m_v_component_of_neutral_wind\n",
+       "1 1979-01-03 07:33:20 -5.555541                -3.4421816                      \n",
+       "2 1979-02-03 07:33:20 -7.505441                -3.7506056                      \n",
+       "3 1979-03-03 07:33:20 -6.009777                -3.6572094                      \n",
+       "4 1979-04-03 07:33:20 -6.840693                -3.6980400                      \n",
+       "5 1979-05-03 07:33:20 -5.371830                -2.6187296                      \n",
+       "6 1979-06-03 07:33:20 -2.359188                -0.7256927                      \n",
+       "  X10m_v_component_of_wind X10m_wind_speed X2m_temperature\n",
+       "1 -3.3835087               6.876636        297.3916       \n",
+       "2 -3.7221937               8.661912        297.8700       \n",
+       "3 -3.6413355               7.384764        297.8200       \n",
+       "4 -3.6708593               8.000152        298.8391       \n",
+       "5 -2.5814304               6.368370        299.5951       \n",
+       "6 -0.7029285               3.718911        299.5590       \n",
+       "  coefficient_of_drag_with_waves\n",
+       "1 0.0009660448                  \n",
+       "2 0.0010872188                  \n",
+       "3 0.0009927112                  \n",
+       "4 0.0010309881                  \n",
+       "5 0.0009067503                  \n",
+       "6 0.0007623711                  \n",
+       "  instantaneous_eastward_turbulent_surface_stress\n",
+       "1 -0.06716114                                    \n",
+       "2 -0.11780131                                    \n",
+       "3 -0.07737940                                    \n",
+       "4 -0.09462619                                    \n",
+       "5 -0.06155479                                    \n",
+       "6 -0.01893848                                    \n",
+       "  instantaneous_northward_turbulent_surface_stress mean_wave_period\n",
+       "1 -0.038194000                                     5.109558        \n",
+       "2 -0.057158770                                     5.138206        \n",
+       "3 -0.044714570                                     4.698611        \n",
+       "4 -0.048265874                                     4.723882        \n",
+       "5 -0.027291000                                     4.382532        \n",
+       "6 -0.005485456                                     4.253867        \n",
+       "  medium_cloud_cover normalized_stress_into_ocean\n",
+       "1 0.08314790         0.9682530                   \n",
+       "2 0.03305978         0.9474420                   \n",
+       "3 0.07676148         0.9649039                   \n",
+       "4 0.10878414         0.9585794                   \n",
+       "5 0.14890963         0.9820386                   \n",
+       "6 0.19013447         0.9968835                   \n",
+       "  ocean_surface_stress_equivalent_10m_neutral_wind_speed\n",
+       "1 5.104736                                              \n",
+       "2 6.360840                                              \n",
+       "3 5.394026                                              \n",
+       "4 5.801816                                              \n",
+       "5 4.473986                                              \n",
+       "6 2.887207                                              \n",
+       "  sea_surface_temperature surface_pressure u_component_stokes_drift\n",
+       "1 297.8951                101222.0         -0.04802281             \n",
+       "2 298.1784                101276.4         -0.07668150             \n",
+       "3 297.9276                101158.9         -0.05440897             \n",
+       "4 299.0398                101125.6         -0.06506085             \n",
+       "5 299.9145                101088.1         -0.04461080             \n",
+       "6 300.3838                101256.3         -0.01688945             \n",
+       "  v_component_stokes_drift\n",
+       "1 -0.038124714            \n",
+       "2 -0.046993010            \n",
+       "3 -0.040235480            \n",
+       "4 -0.042440515            \n",
+       "5 -0.027182150            \n",
+       "6 -0.008176684            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(wind_ds_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wind_ds_1 <- read.csv(\"../DATA/ERA5_combined_wind_1_v2.csv\")\n",
-    "wind_ds_2 <- read.csv(\"../DATA/ERA5_combined_wind_2_v2.csv\")\n",
+    "wind_ds_1 <- read.csv(\"../DATA/ERA5_combined_wind_1_v3.csv\")\n",
+    "wind_ds_2 <- read.csv(\"../DATA/ERA5_combined_wind_2_v3.csv\")\n",
     "\n",
     "# adding time so all data has matching months, even those on last day of previous\n",
     "# NOTE: MIGHT NEED TO DO TEMPORAL INTERPOLATION vs NISKIN DATA INSTEAD\n",
@@ -93,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
