--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/Zooplankton2CSV.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/DataPipeline/Zooplankton2CSV.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,76 +29,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Data variables:\n",
-       "    Cruise             (unlimited) float64 71.0 71.0 72.0 ... 231.0 232.0 232.0\n",
-       "    Cruise_ID          (unlimited) <U7 'CAR-071' 'CAR-071' ... 'CAR-232'\n",
-       "    Day                (unlimited) float64 9.0 9.0 6.0 6.0 ... 21.0 12.0 12.0\n",
-       "    Month              (unlimited) float64 10.0 10.0 11.0 11.0 ... 12.0 1.0 1.0\n",
-       "    Year               (unlimited) float64 2.001e+03 2.001e+03 ... 2.017e+03\n",
-       "    Date               (unlimited) <U10 '2001-10-09' ... '2017-01-12'\n",
-       "    Latitude           (unlimited) float64 10.5 10.5 10.5 ... 10.5 10.5 10.5\n",
-       "    Longitude          (unlimited) float64 -64.66 -64.66 ... -64.67 -64.67\n",
-       "    Analyst            (unlimited) <U20 'Javier Gutierrez' ... 'Jaimie Rojas ...\n",
-       "    Mesh_Size          (unlimited) float64 200.0 500.0 500.0 ... 200.0 500.0\n",
-       "    TOTAL_DENSITY      (unlimited) float64 1.113e+03 212.9 13.43 ... 759.3 131.7\n",
-       "    BIOMASS            (unlimited) float64 26.83 15.95 2.337 ... 3.107 0.9665\n",
-       "    ASH                (unlimited) float64 6.843 3.309 0.07242 ... 0.6578 0.2469\n",
-       "    COPEPODS           (unlimited) float64 741.8 160.2 5.618 ... 268.6 99.93\n",
-       "    CALANOIDS          (unlimited) float64 nan nan nan nan ... 23.16 211.5 96.76\n",
-       "    CYCLOPOIDA         (unlimited) float64 nan nan nan nan ... 0.0 0.0 31.72 0.0\n",
-       "    HAPARCTICOIDA      (unlimited) float64 nan nan nan nan ... 2.725 8.46 0.0\n",
-       "    POECILOSTOMATOIDA  (unlimited) float64 nan nan nan nan ... 12.94 16.92 3.172\n",
-       "    L_FISH             (unlimited) float64 4.279 1.369 0.498 0.0 ... 0.0 0.0 0.0\n",
-       "    H_FISH             (unlimited) float64 19.97 6.391 0.2789 ... 0.0 0.0 0.0\n",
-       "    CHAETOGNATHA       (unlimited) float64 21.4 7.76 1.295 ... 0.0 10.57 1.586\n",
-       "    CLADOCEROS         (unlimited) float64 98.43 3.88 0.01992 ... 8.46 1.586\n",
-       "    OSTRACODA          (unlimited) float64 32.81 1.598 0.3387 ... 31.72 0.0\n",
-       "    FORAMINIFERA       (unlimited) float64 2.853 3.424 1.195 ... 0.0 31.72 7.931\n",
-       "    AMPHIPODS          (unlimited) float64 1.426 0.4565 0.1992 ... 1.363 0.0 0.0\n",
-       "    ISOPODS            (unlimited) float64 nan 0.0 0.0 nan ... 0.0 0.0 0.0 1.586\n",
-       "    EUPHAUSIIDS        (unlimited) float64 1.426 0.0 0.1992 ... 0.0 0.0 0.0\n",
-       "    MISYDACEA          (unlimited) float64 0.0 0.6847 0.0 0.0 ... 0.0 0.0 0.0\n",
-       "    SERGESTID          (unlimited) float64 nan 0.2282 0.01992 ... 0.0 4.23 1.586\n",
-       "    L_CRUSTACEA        (unlimited) float64 0.0 3.195 1.175 ... 164.2 404.0 15.86\n",
-       "    N_COPEPOD          (unlimited) float64 nan nan nan nan ... 3.406 19.03 0.0\n",
-       "    C_COPEPOD          (unlimited) float64 nan nan nan nan ... 136.3 253.8 7.931\n",
-       "    N_CIRRIPEDIA       (unlimited) float64 nan nan nan nan ... 0.0 0.0 0.0 0.0\n",
-       "    C_CIRRIPEDIA       (unlimited) float64 nan nan nan nan ... 24.53 126.9 0.0\n",
-       "    L_DECAPODA         (unlimited) float64 nan nan nan nan ... 0.0 4.23 7.931\n",
-       "    L_STOMATOPODA      (unlimited) float64 nan 0.0 0.03984 nan ... 0.0 0.0 0.0\n",
-       "    L_EUPHAUSIID       (unlimited) float64 nan nan nan nan ... 0.0 0.0 0.0 0.0\n",
-       "    L_SERGESTID        (unlimited) float64 nan nan nan nan ... 0.0 0.0 0.0 0.0\n",
-       "    POLICHAETES        (unlimited) float64 0.0 1.141 0.01992 ... 0.0 0.0 0.0\n",
-       "    L_CYPHONAUTES      (unlimited) float64 nan 0.0 0.0 nan ... 0.0 0.0 0.0 0.0\n",
-       "    MEDUSA             (unlimited) float64 15.69 2.511 0.1394 ... 0.0 0.0 0.0\n",
-       "    SIPHONOPHORES      (unlimited) float64 0.0 1.141 0.01992 0.0 ... 0.0 0.0 0.0\n",
-       "    CTENOPHORES        (unlimited) float64 0.0 0.2282 0.757 ... 0.0 0.0 0.0\n",
-       "    L_ECHINODERMS      (unlimited) float64 0.0 0.0 0.0 0.4697 ... 0.0 0.0 0.0\n",
-       "    PTEROPODS          (unlimited) float64 7.132 0.0 0.5777 ... 0.0 0.0 0.0\n",
-       "    HETEROPODS         (unlimited) float64 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0\n",
-       "    GASTROPODS         (unlimited) float64 nan 0.0 0.0 nan ... 0.0 0.0 0.0 0.0\n",
-       "    L_CEPHALOPODA      (unlimited) float64 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0\n",
-       "    L_BIVALVE          (unlimited) float64 0.0 0.0 0.0 0.0 ... 3.406 0.0 0.0\n",
-       "    L_GASTROPOD        (unlimited) float64 nan 0.0 0.0 nan ... 0.0 5.45 0.0 0.0\n",
-       "    PROTOZOAN          (unlimited) float64 39.94 7.532 0.0 ... 0.0 31.72 7.931\n",
-       "    RADIOLARIAN        (unlimited) float64 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0\n",
-       "    APPENDICULARIANS   (unlimited) float64 91.29 9.358 0.5179 ... 0.0 0.0 1.586\n",
-       "    SALPS              (unlimited) float64 8.559 1.826 0.5179 ... 0.0 0.0 0.0\n",
-       "    DOLIOLIDS          (unlimited) float64 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0\n",
-       "    BIVALVES           (unlimited) float64 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0\n",
-       "    H_CRUSTACEA        (unlimited) float64 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0\n",
-       "    L_ANFIOXUS         (unlimited) float64 nan 0.0 0.0 nan ... 0.0 0.0 0.0 0.0\n",
-       "    LUCIFER            (unlimited) float64 2.853 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0\n",
-       "    JUV_GASTROPOD      (unlimited) float64 nan 0.0 0.0 nan ... 0.0 0.0 0.0 0.0"
+       "    Cruise             (unlimited) float64 ...\n",
+       "    Cruise_ID          (unlimited) |S513 ...\n",
+       "    Day                (unlimited) float64 ...\n",
+       "    Month              (unlimited) float64 ...\n",
+       "    Year               (unlimited) float64 ...\n",
+       "    Date               (unlimited) |S513 ...\n",
+       "    Latitude           (unlimited) float64 ...\n",
+       "    Longitude          (unlimited) float64 ...\n",
+       "    Analyst            (unlimited) |S513 ...\n",
+       "    Mesh_Size          (unlimited) float64 ...\n",
+       "    TOTAL_DENSITY      (unlimited) float64 ...\n",
+       "    BIOMASS            (unlimited) float64 ...\n",
+       "    ASH                (unlimited) float64 ...\n",
+       "    COPEPODS           (unlimited) float64 ...\n",
+       "    CALANOIDS          (unlimited) |S513 ...\n",
+       "    CYCLOPOIDA         (unlimited) |S513 ...\n",
+       "    HAPARCTICOIDA      (unlimited) |S513 ...\n",
+       "    POECILOSTOMATOIDA  (unlimited) |S513 ...\n",
+       "    L_FISH             (unlimited) float64 ...\n",
+       "    H_FISH             (unlimited) float64 ...\n",
+       "    CHAETOGNATHA       (unlimited) float64 ...\n",
+       "    CLADOCEROS         (unlimited) float64 ...\n",
+       "    OSTRACODA          (unlimited) float64 ...\n",
+       "    FORAMINIFERA       (unlimited) float64 ...\n",
+       "    AMPHIPODS          (unlimited) float64 ...\n",
+       "    ISOPODS            (unlimited) |S513 ...\n",
+       "    EUPHAUSIIDS        (unlimited) float64 ...\n",
+       "    MISYDACEA          (unlimited) float64 ...\n",
+       "    SERGESTID          (unlimited) |S513 ...\n",
+       "    L_CRUSTACEA        (unlimited) float64 ...\n",
+       "    N_COPEPOD          (unlimited) |S513 ...\n",
+       "    C_COPEPOD          (unlimited) |S513 ...\n",
+       "    N_CIRRIPEDIA       (unlimited) |S513 ...\n",
+       "    C_CIRRIPEDIA       (unlimited) |S513 ...\n",
+       "    L_DECAPODA         (unlimited) |S513 ...\n",
+       "    L_STOMATOPODA      (unlimited) |S513 ...\n",
+       "    L_EUPHAUSIID       (unlimited) |S513 ...\n",
+       "    L_SERGESTID        (unlimited) |S513 ...\n",
+       "    POLICHAETES        (unlimited) float64 ...\n",
+       "    L_CYPHONAUTES      (unlimited) |S513 ...\n",
+       "    MEDUSA             (unlimited) float64 ...\n",
+       "    SIPHONOPHORES      (unlimited) float64 ...\n",
+       "    CTENOPHORES        (unlimited) float64 ...\n",
+       "    L_ECHINODERMS      (unlimited) float64 ...\n",
+       "    PTEROPODS          (unlimited) float64 ...\n",
+       "    HETEROPODS         (unlimited) float64 ...\n",
+       "    GASTROPODS         (unlimited) |S513 ...\n",
+       "    L_CEPHALOPODA      (unlimited) float64 ...\n",
+       "    L_BIVALVE          (unlimited) float64 ...\n",
+       "    L_GASTROPOD        (unlimited) |S513 ...\n",
+       "    PROTOZOAN          (unlimited) float64 ...\n",
+       "    RADIOLARIAN        (unlimited) float64 ...\n",
+       "    APPENDICULARIANS   (unlimited) float64 ...\n",
+       "    SALPS              (unlimited) float64 ...\n",
+       "    DOLIOLIDS          (unlimited) float64 ...\n",
+       "    BIVALVES           (unlimited) float64 ...\n",
+       "    H_CRUSTACEA        (unlimited) float64 ...\n",
+       "    L_ANFIOXUS         (unlimited) |S513 ...\n",
+       "    LUCIFER            (unlimited) float64 ...\n",
+       "    JUV_GASTROPOD      (unlimited) |S513 ..."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zooplankton_pd.to_csv(\"Zooplankton_newest_full.csv\")"
+    "#zooplankton_pd.to_csv(\"Zooplankton_newest_full.csv\")"
    ]
   },
   {
