--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,119 +63,92 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'X'</li><li>'time.x'</li><li>'X10m_u_component_of_wind'</li><li>'X10m_v_component_of_neutral_wind'</li><li>'X10m_v_component_of_wind'</li><li>'X10m_wind_speed'</li><li>'X2m_temperature'</li><li>'coefficient_of_drag_with_waves'</li><li>'instantaneous_eastward_turbulent_surface_stress'</li><li>'instantaneous_northward_turbulent_surface_stress'</li><li>'mean_wave_period'</li><li>'medium_cloud_cover'</li><li>'normalized_stress_into_ocean'</li><li>'ocean_surface_stress_equivalent_10m_neutral_wind_speed'</li><li>'sea_surface_temperature'</li><li>'surface_pressure'</li><li>'u_component_stokes_drift'</li><li>'v_component_stokes_drift'</li><li>'time_month'</li><li>'time.y'</li><li>'clear_sky_direct_solar_radiation_at_surface'</li><li>'eastward_turbulent_surface_stress'</li><li>'evaporation'</li><li>'instantaneous_10m_wind_gust'</li><li>'large_scale_precipitation'</li><li>'magnitude_of_turbulent_surface_stress'</li><li>'mean_eastward_turbulent_surface_stress'</li><li>'mean_evaporation_rate'</li><li>'mean_magnitude_of_turbulent_surface_stress'</li><li>'mean_northward_turbulent_surface_stress'</li><li>'mean_total_precipitation_rate'</li><li>'northward_turbulent_surface_stress'</li><li>'surface_sensible_heat_flux'</li><li>'total_precipitation'</li></ol>\n"
+       "<ol class=list-inline><li>'X'</li><li>'time.x'</li><li>'cdww'</li><li>'iews'</li><li>'inss'</li><li>'mcc'</li><li>'mwp'</li><li>'si10'</li><li>'sp'</li><li>'sst'</li><li>'t2m'</li><li>'tauoc'</li><li>'u10'</li><li>'ust'</li><li>'v10'</li><li>'v10n'</li><li>'vst'</li><li>'wind'</li><li>'time_month'</li><li>'time.y'</li><li>'cdir'</li><li>'e'</li><li>'ewss'</li><li>'i10fg'</li><li>'lsp'</li><li>'magss'</li><li>'mer'</li><li>'metss'</li><li>'mmtss'</li><li>'mntss'</li><li>'mtpr'</li><li>'nsss'</li><li>'sshf'</li><li>'tp'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item 'X'\n",
        "\\item 'time.x'\n",
-       "\\item 'X10m\\_u\\_component\\_of\\_wind'\n",
-       "\\item 'X10m\\_v\\_component\\_of\\_neutral\\_wind'\n",
-       "\\item 'X10m\\_v\\_component\\_of\\_wind'\n",
-       "\\item 'X10m\\_wind\\_speed'\n",
-       "\\item 'X2m\\_temperature'\n",
-       "\\item 'coefficient\\_of\\_drag\\_with\\_waves'\n",
-       "\\item 'instantaneous\\_eastward\\_turbulent\\_surface\\_stress'\n",
-       "\\item 'instantaneous\\_northward\\_turbulent\\_surface\\_stress'\n",
-       "\\item 'mean\\_wave\\_period'\n",
-       "\\item 'medium\\_cloud\\_cover'\n",
-       "\\item 'normalized\\_stress\\_into\\_ocean'\n",
-       "\\item 'ocean\\_surface\\_stress\\_equivalent\\_10m\\_neutral\\_wind\\_speed'\n",
-       "\\item 'sea\\_surface\\_temperature'\n",
-       "\\item 'surface\\_pressure'\n",
-       "\\item 'u\\_component\\_stokes\\_drift'\n",
-       "\\item 'v\\_component\\_stokes\\_drift'\n",
+       "\\item 'cdww'\n",
+       "\\item 'iews'\n",
+       "\\item 'inss'\n",
+       "\\item 'mcc'\n",
+       "\\item 'mwp'\n",
+       "\\item 'si10'\n",
+       "\\item 'sp'\n",
+       "\\item 'sst'\n",
+       "\\item 't2m'\n",
+       "\\item 'tauoc'\n",
+       "\\item 'u10'\n",
+       "\\item 'ust'\n",
+       "\\item 'v10'\n",
+       "\\item 'v10n'\n",
+       "\\item 'vst'\n",
+       "\\item 'wind'\n",
        "\\item 'time\\_month'\n",
        "\\item 'time.y'\n",
-       "\\item 'clear\\_sky\\_direct\\_solar\\_radiation\\_at\\_surface'\n",
-       "\\item 'eastward\\_turbulent\\_surface\\_stress'\n",
-       "\\item 'evaporation'\n",
-       "\\item 'instantaneous\\_10m\\_wind\\_gust'\n",
-       "\\item 'large\\_scale\\_precipitation'\n",
-       "\\item 'magnitude\\_of\\_turbulent\\_surface\\_stress'\n",
-       "\\item 'mean\\_eastward\\_turbulent\\_surface\\_stress'\n",
-       "\\item 'mean\\_evaporation\\_rate'\n",
-       "\\item 'mean\\_magnitude\\_of\\_turbulent\\_surface\\_stress'\n",
-       "\\item 'mean\\_northward\\_turbulent\\_surface\\_stress'\n",
-       "\\item 'mean\\_total\\_precipitation\\_rate'\n",
-       "\\item 'northward\\_turbulent\\_surface\\_stress'\n",
-       "\\item 'surface\\_sensible\\_heat\\_flux'\n",
-       "\\item 'total\\_precipitation'\n",
+       "\\item 'cdir'\n",
+       "\\item 'e'\n",
+       "\\item 'ewss'\n",
+       "\\item 'i10fg'\n",
+       "\\item 'lsp'\n",
+       "\\item 'magss'\n",
+       "\\item 'mer'\n",
+       "\\item 'metss'\n",
+       "\\item 'mmtss'\n",
+       "\\item 'mntss'\n",
+       "\\item 'mtpr'\n",
+       "\\item 'nsss'\n",
+       "\\item 'sshf'\n",
+       "\\item 'tp'\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
        "1. 'X'\n",
        "2. 'time.x'\n",
-       "3. 'X10m_u_component_of_wind'\n",
-       "4. 'X10m_v_component_of_neutral_wind'\n",
-       "5. 'X10m_v_component_of_wind'\n",
-       "6. 'X10m_wind_speed'\n",
-       "7. 'X2m_temperature'\n",
-       "8. 'coefficient_of_drag_with_waves'\n",
-       "9. 'instantaneous_eastward_turbulent_surface_stress'\n",
-       "10. 'instantaneous_northward_turbulent_surface_stress'\n",
-       "11. 'mean_wave_period'\n",
-       "12. 'medium_cloud_cover'\n",
-       "13. 'normalized_stress_into_ocean'\n",
-       "14. 'ocean_surface_stress_equivalent_10m_neutral_wind_speed'\n",
-       "15. 'sea_surface_temperature'\n",
-       "16. 'surface_pressure'\n",
-       "17. 'u_component_stokes_drift'\n",
-       "18. 'v_component_stokes_drift'\n",
+       "3. 'cdww'\n",
+       "4. 'iews'\n",
+       "5. 'inss'\n",
+       "6. 'mcc'\n",
+       "7. 'mwp'\n",
+       "8. 'si10'\n",
+       "9. 'sp'\n",
+       "10. 'sst'\n",
+       "11. 't2m'\n",
+       "12. 'tauoc'\n",
+       "13. 'u10'\n",
+       "14. 'ust'\n",
+       "15. 'v10'\n",
+       "16. 'v10n'\n",
+       "17. 'vst'\n",
+       "18. 'wind'\n",
        "19. 'time_month'\n",
        "20. 'time.y'\n",
-       "21. 'clear_sky_direct_solar_radiation_at_surface'\n",
-       "22. 'eastward_turbulent_surface_stress'\n",
-       "23. 'evaporation'\n",
-       "24. 'instantaneous_10m_wind_gust'\n",
-       "25. 'large_scale_precipitation'\n",
-       "26. 'magnitude_of_turbulent_surface_stress'\n",
-       "27. 'mean_eastward_turbulent_surface_stress'\n",
-       "28. 'mean_evaporation_rate'\n",
-       "29. 'mean_magnitude_of_turbulent_surface_stress'\n",
-       "30. 'mean_northward_turbulent_surface_stress'\n",
-       "31. 'mean_total_precipitation_rate'\n",
-       "32. 'northward_turbulent_surface_stress'\n",
-       "33. 'surface_sensible_heat_flux'\n",
-       "34. 'total_precipitation'\n",
+       "21. 'cdir'\n",
+       "22. 'e'\n",
+       "23. 'ewss'\n",
+       "24. 'i10fg'\n",
+       "25. 'lsp'\n",
+       "26. 'magss'\n",
+       "27. 'mer'\n",
+       "28. 'metss'\n",
+       "29. 'mmtss'\n",
+       "30. 'mntss'\n",
+       "31. 'mtpr'\n",
+       "32. 'nsss'\n",
+       "33. 'sshf'\n",
+       "34. 'tp'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       " [1] \"X\"                                                     \n",
-       " [2] \"time.x\"                                                \n",
-       " [3] \"X10m_u_component_of_wind\"                              \n",
-       " [4] \"X10m_v_component_of_neutral_wind\"                      \n",
-       " [5] \"X10m_v_component_of_wind\"                              \n",
-       " [6] \"X10m_wind_speed\"                                       \n",
-       " [7] \"X2m_temperature\"                                       \n",
-       " [8] \"coefficient_of_drag_with_waves\"                        \n",
-       " [9] \"instantaneous_eastward_turbulent_surface_stress\"       \n",
-       "[10] \"instantaneous_northward_turbulent_surface_stress\"      \n",
-       "[11] \"mean_wave_period\"                                      \n",
-       "[12] \"medium_cloud_cover\"                                    \n",
-       "[13] \"normalized_stress_into_ocean\"                          \n",
-       "[14] \"ocean_surface_stress_equivalent_10m_neutral_wind_speed\"\n",
-       "[15] \"sea_surface_temperature\"                               \n",
-       "[16] \"surface_pressure\"                                      \n",
-       "[17] \"u_component_stokes_drift\"                              \n",
-       "[18] \"v_component_stokes_drift\"                              \n",
-       "[19] \"time_month\"                                            \n",
-       "[20] \"time.y\"                                                \n",
-       "[21] \"clear_sky_direct_solar_radiation_at_surface\"           \n",
-       "[22] \"eastward_turbulent_surface_stress\"                     \n",
-       "[23] \"evaporation\"                                           \n",
-       "[24] \"instantaneous_10m_wind_gust\"                           \n",
-       "[25] \"large_scale_precipitation\"                             \n",
-       "[26] \"magnitude_of_turbulent_surface_stress\"                 \n",
-       "[27] \"mean_eastward_turbulent_surface_stress\"                \n",
-       "[28] \"mean_evaporation_rate\"                                 \n",
-       "[29] \"mean_magnitude_of_turbulent_surface_stress\"            \n",
-       "[30] \"mean_northward_turbulent_surface_stress\"               \n",
-       "[31] \"mean_total_precipitation_rate\"                         \n",
-       "[32] \"northward_turbulent_surface_stress\"                    \n",
-       "[33] \"surface_sensible_heat_flux\"                            \n",
-       "[34] \"total_precipitation\"                                   "
+       " [1] \"X\"          \"time.x\"     \"cdww\"       \"iews\"       \"inss\"      \n",
+       " [6] \"mcc\"        \"mwp\"        \"si10\"       \"sp\"         \"sst\"       \n",
+       "[11] \"t2m\"        \"tauoc\"      \"u10\"        \"ust\"        \"v10\"       \n",
+       "[16] \"v10n\"       \"vst\"        \"wind\"       \"time_month\" \"time.y\"    \n",
+       "[21] \"cdir\"       \"e\"          \"ewss\"       \"i10fg\"      \"lsp\"       \n",
+       "[26] \"magss\"      \"mer\"        \"metss\"      \"mmtss\"      \"mntss\"     \n",
+       "[31] \"mtpr\"       \"nsss\"       \"sshf\"       \"tp\"        "
       ]
      },
      "metadata": {},
@@ -188,9 +161,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "197"
+      ],
+      "text/latex": [
+       "197"
+      ],
+      "text/markdown": [
+       "197"
+      ],
+      "text/plain": [
+       "[1] 197"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -220,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +506,51 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'X'</li><li>'date'</li><li>'COCCOLITHOPHORIDS'</li><li>'DIATOMS'</li><li>'DINOFLAGELLATES'</li><li>'CYANOBACTERIA'</li><li>'OTHERS'</li><li>'NANOFLAGELLATES'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'X'\n",
+       "\\item 'date'\n",
+       "\\item 'COCCOLITHOPHORIDS'\n",
+       "\\item 'DIATOMS'\n",
+       "\\item 'DINOFLAGELLATES'\n",
+       "\\item 'CYANOBACTERIA'\n",
+       "\\item 'OTHERS'\n",
+       "\\item 'NANOFLAGELLATES'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'X'\n",
+       "2. 'date'\n",
+       "3. 'COCCOLITHOPHORIDS'\n",
+       "4. 'DIATOMS'\n",
+       "5. 'DINOFLAGELLATES'\n",
+       "6. 'CYANOBACTERIA'\n",
+       "7. 'OTHERS'\n",
+       "8. 'NANOFLAGELLATES'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"X\"                 \"date\"              \"COCCOLITHOPHORIDS\"\n",
+       "[4] \"DIATOMS\"           \"DINOFLAGELLATES\"   \"CYANOBACTERIA\"    \n",
+       "[7] \"OTHERS\"            \"NANOFLAGELLATES\"  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# functional group counts integrated\n",
     "\n",
@@ -526,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,11 +984,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.csv(CARIACO_dat_joined_truncated, \"DATA/Combined_CARIACO_data.csv\")"
+    "write.csv(CARIACO_dat_joined_truncated, \"DATA/Combined_CARIACO_data_v2.csv\")"
    ]
   },
   {
