--- a/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData.ipynb
+++ b/CaRiaco/SCRIPPS/CARIACO_data/Manuscript2DataAnalysis/MERGE_AllRelevantData.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "── \u001b[1mAttaching packages\u001b[22m ──────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
       "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.3     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.3     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.0.0     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mConflicts\u001b[22m ─────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -934,6 +934,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Read Satellite DATA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SeaWiFS_raw <- read.csv(\"SatelliteData/MERGE/SeaWiFS_monthly_mean.csv\")\n",
+    "\n",
+    "MODIS_raw <- read.csv(\"SatelliteData/MERGE/MODIS_monthly_mean.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>date</th><th scope=col>year</th><th scope=col>month</th><th scope=col>day</th><th scope=col>lon</th><th scope=col>lat</th><th scope=col>value</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>1997-10-31</td><td>1997</td><td>10</td><td>16</td><td>-64.6835</td><td>10.6875</td><td>0.2311170</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>1997-11-30</td><td>1997</td><td>11</td><td>15</td><td>-64.6835</td><td>10.6875</td><td>0.6380158</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>1997-12-31</td><td>1997</td><td>12</td><td>16</td><td>-64.6835</td><td>10.6875</td><td>0.9182222</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>1998-01-31</td><td>1998</td><td> 1</td><td>16</td><td>-64.6835</td><td>10.6875</td><td>1.2453725</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>1998-02-28</td><td>1998</td><td> 2</td><td>14</td><td>-64.6835</td><td>10.6875</td><td>0.5960208</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>1998-03-31</td><td>1998</td><td> 3</td><td>16</td><td>-64.6835</td><td>10.6875</td><td>1.9649349</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 7\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & date & year & month & day & lon & lat & value\\\\\n",
+       "  & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & 1997-10-31 & 1997 & 10 & 16 & -64.6835 & 10.6875 & 0.2311170\\\\\n",
+       "\t2 & 1997-11-30 & 1997 & 11 & 15 & -64.6835 & 10.6875 & 0.6380158\\\\\n",
+       "\t3 & 1997-12-31 & 1997 & 12 & 16 & -64.6835 & 10.6875 & 0.9182222\\\\\n",
+       "\t4 & 1998-01-31 & 1998 &  1 & 16 & -64.6835 & 10.6875 & 1.2453725\\\\\n",
+       "\t5 & 1998-02-28 & 1998 &  2 & 14 & -64.6835 & 10.6875 & 0.5960208\\\\\n",
+       "\t6 & 1998-03-31 & 1998 &  3 & 16 & -64.6835 & 10.6875 & 1.9649349\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 7\n",
+       "\n",
+       "| <!--/--> | date &lt;chr&gt; | year &lt;dbl&gt; | month &lt;dbl&gt; | day &lt;dbl&gt; | lon &lt;dbl&gt; | lat &lt;dbl&gt; | value &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| 1 | 1997-10-31 | 1997 | 10 | 16 | -64.6835 | 10.6875 | 0.2311170 |\n",
+       "| 2 | 1997-11-30 | 1997 | 11 | 15 | -64.6835 | 10.6875 | 0.6380158 |\n",
+       "| 3 | 1997-12-31 | 1997 | 12 | 16 | -64.6835 | 10.6875 | 0.9182222 |\n",
+       "| 4 | 1998-01-31 | 1998 |  1 | 16 | -64.6835 | 10.6875 | 1.2453725 |\n",
+       "| 5 | 1998-02-28 | 1998 |  2 | 14 | -64.6835 | 10.6875 | 0.5960208 |\n",
+       "| 6 | 1998-03-31 | 1998 |  3 | 16 | -64.6835 | 10.6875 | 1.9649349 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  date       year month day lon      lat     value    \n",
+       "1 1997-10-31 1997 10    16  -64.6835 10.6875 0.2311170\n",
+       "2 1997-11-30 1997 11    15  -64.6835 10.6875 0.6380158\n",
+       "3 1997-12-31 1997 12    16  -64.6835 10.6875 0.9182222\n",
+       "4 1998-01-31 1998  1    16  -64.6835 10.6875 1.2453725\n",
+       "5 1998-02-28 1998  2    14  -64.6835 10.6875 0.5960208\n",
+       "6 1998-03-31 1998  3    16  -64.6835 10.6875 1.9649349"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head(SeaWiFS_raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add time_month column to ctd ds\n",
+    "SeaWiFS_raw$date = as.Date(SeaWiFS_raw$date, format=\"%Y-%m-%d\")\n",
+    "MODIS_raw$date = as.Date(MODIS_raw$date, format=\"%Y-%m-%d\")\n",
+    "\n",
+    "SeaWiFS_month <- SeaWiFS_raw %>%\n",
+    "  mutate(time_month = format(date, format = \"%m-%Y\"), SeaWiFS_chla=value) %>%\n",
+    "    select(time_month, SeaWiFS_chla)\n",
+    "\n",
+    "MODIS_month <- MODIS_raw %>%\n",
+    "  mutate(time_month = format(date, format = \"%m-%Y\"), MODIS_chla=value) %>%\n",
+    "    select(time_month, MODIS_chla)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# NOW MERGE!"
    ]
   },
@@ -952,12 +1066,13 @@
     "    phyto_cleaned\n",
     "    \n",
     "    zoo_ds_month_cleaned\n",
-    "    "
+    "    \n",
+    "    MODIS + SeaWiFS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,14 +1083,16 @@
     "                           niskin_ds_cleaned, \n",
     "                           ctd_ds_month_cleaned, \n",
     "                           phyto_cleaned,\n",
-    "                           zoo_ds_month_cleaned\n",
+    "                           zoo_ds_month_cleaned,\n",
+    "                           SeaWiFS_month,\n",
+    "                           MODIS_month\n",
     "                          ) %>% \n",
     "  reduce(left_join, by = c(\"time_month\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,11 +1101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.csv(CARIACO_dat_joined_truncated, \"DATA/Combined_CARIACO_data_v2.csv\")"
+    "write.csv(CARIACO_dat_joined_truncated, \"DATA/Combined_CARIACO_data_v3.csv\")"
    ]
   },
   {
